# vistmachine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
core/: CMakeLists.txt
core/src/: vistmachine.c
core/src/inc/: vistmachine.h  vistmachine_private.h
tests/: tst_vistmachine.c
tests/main/: main.c
